# sentio_trader

./: .gitignore  CMakeLists.txt  README.md  README_new.md  Sentio C++ Trading System - Complete C.mm
artifacts/GRU/primary/: metadata.json  model.pt
artifacts/Transformer/compatible_v1/: metadata.json
artifacts/Transformer/real_data_3epoch/: tfm_metadata.json
artifacts/Transformer/simple_fixed/: model.meta.json
artifacts/Transformer/v1_50e/: model.meta.json
artifacts/Transformer/v2_2_6_0_compatible/: metadata.json
data/equities/: TQQQ_RTH_NH.csv
data/future_qqq/: README.md  TRACK_REFERENCE.md  future_qqq_track_10.csv  metadata.json
data/mars_cache/: cache_index.json
data/trades/: 03192905_trades.jsonl  05948374_trades.jsonl  07194159_trades.jsonl  23987644_trades.jsonl  31467290_trades.jsonl  38226781_trades.jsonl  87314551_trades.jsonl  95665805_trades.jsonl  97487434_trades.jsonl  97799209_trades.jsonl
docs/: ANALYZER_COMPARISON_RESULTS.md  COMPREHENSIVE_ML_STRATEGY_INTEGRATION_GUIDE.md  CPP_ANALYZER_IMPROVEMENT_REQUIREMENTS.md  ENHANCED_ANALYZER_QUICK_REFERENCE.md  ENHANCED_ANALYZER_SETUP_GUIDE.md  ML_STRATEGY_INTEGRATION_GUIDE.md  PROJECT_RULES.md  TRADING_PIPELINE_ARCHITECTURE_ANALYSIS.md  architecture.md  architecture_new.md  cpp_training_system.md  sentio_system_pseudocode_overview.md  sentio_user_guide.md
include/backend/: adaptive_portfolio_manager.h  adaptive_trading_mechanism.h  audit_component.h  backend_component.h  leverage_data_generator.h  leverage_manager.h  leverage_types.h  leverage_utils.h  portfolio_manager.h  position_state_machine.h
include/cli/: audit_command.h  command_interface.h  strattest_command.h  trade_command.h
include/common/: binary_data.h  config.h  json_utils.h  tensor_dataset.h  trade_event.h  types.h  utils.h
include/features/: feature_config_standard.h
include/ml/: gru_model.h
include/strategy/: ml_signal.h  ml_strategy_base.h  momentum_scalper.h  optimized_gru_strategy.h  signal_output.h  sigor_config.h  sigor_strategy.h  strategy_component.h  transformer_strategy.h
include/training/: cpp_ppo_trainer.h  gru_trainer.h  quality_enforced_loss.h
megadocs/: ADAPTIVE_TRADING_MECHANISM_REQUIREMENTS.md  Adaptive_Trading_Mechanism_MegaDoc.md  BUG_symbol_unrealized_table_format.md  LEVERAGE_TRADING_REQUIREMENTS.md  NEGATIVE_RETURNS_BUG_REPORT.md  Negative_Returns_Investigation_MegaDoc.md  PHANTOM_SELL_ORDERS_BUG_REPORT.md  PORTFOLIO_MANAGER_BUG_REPORT.md  POSITION_STATE_MACHINE_REQUIREMENTS.md  Phantom_Sell_Orders_MegaDoc_part1.md  Phantom_Sell_Orders_MegaDoc_part2.md  Portfolio_Manager_Bug_MegaDoc.md  Position_State_Machine_Complete_MegaDoc_part1.md  Position_State_Machine_Complete_MegaDoc_part2.md  Position_State_Machine_Complete_MegaDoc_part3.md  Position_State_Machine_Complete_MegaDoc_part4.md  Position_State_Machine_Complete_MegaDoc_part5.md  Position_State_Machine_Complete_MegaDoc_part6.md  Position_State_Machine_Complete_MegaDoc_part7.md  Position_State_Machine_Complete_MegaDoc_part8.md  SENTIO_ARCHITECTURE_UPGRADE_COMPLETE_MEGADOC.md  Sentio_Bug_Report_MegaDoc.md  Sentio_Leverage_Trading_MegaDoc_part1.md  Sentio_Leverage_Trading_MegaDoc_part2.md  Sentio_Trader_MegaDoc.md  Trading_Inefficiencies_Investigation_MegaDoc.md  position_history_requirements.md
src/backend/: adaptive_portfolio_manager.cpp  adaptive_trading_mechanism.cpp  audit_component.cpp  backend_component.cpp  leverage_data_generator.cpp  leverage_manager.cpp  portfolio_manager.cpp  position_state_machine.cpp
src/cli/: audit_command.cpp  audit_main.cpp  command_interface.cpp  gru_trainer_main.cpp  psm_demo.cpp  sentio_cli_main.cpp  strattest_command.cpp  strattest_main.cpp  tfm_trainer_real_data.cpp  tfm_trainer_with_validation.cpp  trade_command.cpp
src/common/: binary_data.cpp  json_utils.cpp  trade_event.cpp  types.cpp  utils.cpp
src/ml/: gru_model.cpp
src/strategy/: cpp_ppo_strategy.cpp  ml_strategy_base.cpp  momentum_scalper.cpp  optimized_gru_strategy.cpp  signal_output.cpp  sigor_config.cpp  sigor_strategy.cpp  strategy_component.cpp  transformer_strategy.cpp
src/training/: cpp_ppo_trainer.cpp  gru_trainer.cpp  quality_enforced_loss.cpp
tools/: add_comprehensive_comments.py  align_bars.py  analyze_ohlc_patterns.py  analyze_unused_code.py  check_file_organization.py  comprehensive_sentio_integrity_check.py  comprehensive_strategy_tester.py  cpp_analyzer.py  create_mega_document.py  create_rth_data.py  create_transformer_dataset.py  csv_to_binary_converter.cpp  data_downloader.py  dupdef_scan_cpp.py  enhanced_sentio_integrity_check.py  fast_historical_bridge.py  filter_market_data.py  finalize_kochi_features.py  generate_feature_cache.py  generate_future_qqq_enhanced.py  generate_future_qqq_mars_enhanced.py  generate_future_qqq_mars_standalone.py  generate_kochi_feature_cache.py  generate_leverage_data.cpp  generate_leverage_data.py  historical_context_agent.py  mars_bridge.py  ohlc_model.json  profile_functions.d  quick_integrity_test.py  sentio_integrity_check.py  sentio_unified_integrity_check.py  test_sentio_integrity.py  tfa_quick_setup.sh  tfa_sanity_check.py  tfa_sanity_check_report.txt  train_tfa_cpp.py  train_tfa_cpp_compatible.py  train_tfa_simple.py
